# Nibbler

./: CMakeLists.txt  README.md  brew_fix  build  configure  dependencies
cmake_modules/: FindSFML.cmake
includes/: engine.class.hpp  entity.class.hpp  food.class.hpp  nibbler.h  player.class.hpp  window.class.hpp
libs/src/lib1/: cleanup.h  lib1.h  render.cpp
libs/src/lib2/: featured_renderer.cpp  featured_renderer.h  lib2.h  render.cpp
libs/src/lib3/: lib3.h  render.cpp
src/: engine.class.cpp  entity.class.cpp  food.class.cpp  main.cpp  player.class.cpp  window.class.cpp
